<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/dimen_23_dip"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60_dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nba_txt_aboutpop_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/teamvs"
            android:textColor="@color/darkgrey"
            android:textSize="@dimen/dimen_23_dip" />

        <TextView
            android:id="@+id/nba_txt_aboutpop_cancle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginEnd="@dimen/dimen_23_dip"
            android:text="@string/cancle"
            android:textColor="@color/darkgrey"
            android:textSize="@dimen/dimen_20_dip" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5_dip"
        android:layout_margin="@dimen/dimen_8_dip"
        android:background="@color/darkgrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_190_dip"
        android:layout_marginTop="@dimen/dimen_10_dip"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_team_zhu"
            android:layout_width="@dimen/dimen_320_dip"
            android:layout_height="@dimen/dimen_50_dip"
            android:textSize="@dimen/dimen_18_dip"
            android:background="@drawable/sdk_main_bg"
            android:paddingLeft="@dimen/dimen_8_dip"
            android:hint="@string/zhudui" />

        <EditText
            android:id="@+id/et_team_ke"
            android:layout_width="@dimen/dimen_320_dip"
            android:layout_height="@dimen/dimen_50_dip"
            android:layout_marginTop="@dimen/dimen_15_dip"
            android:textSize="@dimen/dimen_18_dip"
            android:background="@drawable/sdk_main_bg"
            android:paddingLeft="@dimen/dimen_8_dip"
            android:hint="@string/kedui" />

        <TextView
            android:id="@+id/txt_vs_sel"
            android:layout_width="@dimen/dimen_320_dip"
            android:layout_height="@dimen/dimen_50_dip"
            android:layout_marginTop="@dimen/dimen_25_dip"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20_dip"
            android:background="@drawable/text_red"
            android:text="@string/commit"/>

    </LinearLayout>

</LinearLayout>