<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round_white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/phonedialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/completephone"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5_dip"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/phonedialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0.5_dip"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phonedialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dialog_left_white"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/phonedialog_cancel"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="@dimen/dimen_0.5_dip"
            android:layout_height="match_parent"
            android:background="@color/grey"/>

        <TextView
            android:id="@+id/phonedialog_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dialog_right_white"
            android:gravity="center"
            android:layout_weight="1.0"
            android:text="@string/phonedialog_submit"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>