<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddTabItemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_60_dip"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/tabitems"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_22_dip" />

        <ImageView
            android:id="@+id/add_tabitem_img_back"
            android:layout_width="@dimen/dimen_30_dip"
            android:layout_height="@dimen/dimen_30_dip"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_10_dip"
            app:srcCompat="@mipmap/back" />

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_0.5_dip"
        android:background="@color/darkgrey"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40_dip"
                android:layout_marginTop="@dimen/dimen_10_dip">

                <TextView
                    android:id="@+id/add_tabitem_txt_mytab"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen_20_dip"
                    android:gravity="center"
                    android:text="@string/mytab"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_20_dip" />

                <TextView
                    android:id="@+id/add_tabitem_txt_select"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/dimen_10_dip"
                    android:layout_toEndOf="@+id/add_tabitem_txt_mytab"
                    android:gravity="center"
                    android:text="@string/mytabselect"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/dimen_13_dip" />

                <TextView
                    android:id="@+id/add_tabitem_txt_edit"
                    android:layout_width="@dimen/dimen_50_dip"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dimen_20_dip"
                    android:background="@drawable/text_ty"
                    android:gravity="center"
                    android:text="@string/mytabedit"
                    android:textColor="@color/dodgerblue"
                    android:textSize="@dimen/dimen_15_dip" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10_dip"
                android:orientation="vertical">

                <com.cc.view.MyGridView
                    android:id="@+id/add_mytabitem_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:horizontalSpacing="@dimen/dimen_10_dip"
                    android:numColumns="4"
                    android:listSelector="@color/transparent"
                    android:padding="@dimen/dimen_13_dip"
                    android:verticalSpacing="@dimen/dimen_20_dip" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40_dip"
                android:layout_marginTop="@dimen/dimen_10_dip">

                <TextView
                    android:id="@+id/add_tabitem_txt_alltab"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen_20_dip"
                    android:gravity="center"
                    android:text="@string/alltab"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_20_dip" />

                <TextView
                    android:id="@+id/add_tabitem_txt_add"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/dimen_10_dip"
                    android:layout_toEndOf="@+id/add_tabitem_txt_alltab"
                    android:gravity="center"
                    android:text="@string/addtab"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/dimen_13_dip" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10_dip"
                android:orientation="vertical">

                <com.cc.view.MyGridView
                    android:id="@+id/add_alltabitem_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:listSelector="@color/transparent"
                    android:horizontalSpacing="@dimen/dimen_10_dip"
                    android:numColumns="4"
                    android:padding="@dimen/dimen_13_dip"
                    android:verticalSpacing="@dimen/dimen_20_dip" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>